fixed spacing and buttons

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body {
 
     .container {
       max-width: 900px;
-      margin: 160px auto 30px;
+      margin: 200px auto 30px;
       padding: 0 20px;
     }
 
